Handle padding-bottom for #posts and .infinite-scrolling/.custom-trigger-infinite-scrolling correctly; fix visibility for .pagination and .custom-trigger-infinite-scrolling.

--- a/sass/globals/_layout.sass
+++ b/sass/globals/_layout.sass
@@ -97,8 +97,11 @@ body
 #posts
   margin: 0
   margin-right: $sidebar
-  padding-bottom: $gutter*4
   @extend %clearfix
+  .infinite-scrolling &
+    padding-bottom: $gutter*4
+  .index.custom-trigger-infinite-scrolling &
+    padding-bottom: 0
   .header-left &
     margin-right: 0
     margin-left: $sidebar
