--- a/sass/modules/posts/_pagination.sass
+++ b/sass/modules/posts/_pagination.sass
@@ -11,6 +11,7 @@
   .index.infinite-scrolling &
     visibility: hidden
   .index.custom-trigger-infinite-scrolling &
+    visibility: visible
     li
       float: none
       margin-right: 0
